--- a/pagina.html
+++ b/pagina.html
@@ -11,7 +11,7 @@
             <form method="post" action="recebe_upload.php" enctype="multipart/form-data">
                 <h2 style="color:#fff;">Arquivo</h2>
                 <input type="file" name="arquivo" />
-                <input type="button" style="margin: 10px;" value="Enviar" />
+                <input type="submit" style="margin: 10px;" value="Enviar" />
             </form>                
         </div>
     </body>
