Adicionei a tela de Validar mas ainda to com problema na conexao no conexao.php

--- a/signup.html
+++ b/signup.html
@@ -10,11 +10,11 @@
         <div class="page">
             <form action="cadastro.php" method="post">
                 <h2 style="color: #fff;">Criar conta</h2>
-                <input type="text" name="user_name" placeholder="Nome"><br><br>
-                <input type="text" name="user_email" placeholder="Email"><br><br>
-                <input type="text" name="user_curso" placeholder="Curso"><br><br>    
-                <input type="password" name="user_pass" placeholder="Senha"><br><br>   
-                <input type="button" value="Sign up" onclick="myFunction()"><br><br>
+                <input type="text" name="user_name" id="user_name" placeholder="Nome"><br><br>
+                <input type="text" name="user_email" id="user_email" placeholder="Email"><br><br>
+                <input type="text" name="user_curso" id="user_curso" placeholder="Curso"><br><br>    
+                <input type="password" name="user_pass" id="user_pass" placeholder="Senha"><br><br>   
+                <input type="submit" name="enviar" value="Cadastrar" ><br><br>
 
                 <div id="msg">
                     Parabens, voce criou uma conta!!
@@ -25,11 +25,11 @@
         </div>
     </body>
     <script>
-        function myFunction() {
-            var x = document.getElementById("msg");
-            x.className = "show";
-            setTimeout(function(){ x.className = x.className.replace("show", ""); }, 3000);
-            setTimeout(function(){location.href="index.html";},1000)
+        // function myFunction() {
+        //     var x = document.getElementById("msg");
+        //     x.className = "show";
+        //     setTimeout(function(){ x.className = x.className.replace("show", ""); }, 3000);
+        //     setTimeout(function(){location.href="index.html";},1000)
         }
     </script>
 </html>
