--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     </head>
 
     <body>
+     
         <div class="signin">
-            <form action="cadastro.php" method="post">
+                <form action="valida.php"  method="POST" > 
                 <h2 style="color:#fff;">Bem Vindo</h2>
-                <input type="text" name="username" placeholder="Email"/><br /><br />
-                <input type="password" name="password" placeholder="Senha" /><br /><br />
-                <a href="cong.html"><input type="button" value="Entrar" /></a><br /><br />
+                <input type="text" name="user_name" placeholder="Email"/><br /><br />
+                <input type="password" name="user_pass" placeholder="Senha" /><br /><br />
+                <input  type="submit" value="entrar"class="btn btn-dark" id="entrar" /><br /><br />
                 <div id="container">
                     <a href="forget.html" style=" margin-left:5px; font-size:13px; font-family:Tahoma, Geneva, sans-serif;">Esqueci minha senha</a>
                 </div><br /><br /><br /><br /><br /><br />
