adicionei um input para colocar um nome no arquivo antes de enviar(caso a pessoa utilize nomes ruins kkkk)

--- a/pagina.html
+++ b/pagina.html
@@ -10,6 +10,7 @@
         <div class="page">
             <form method="post" action="recebe_upload.php" enctype="multipart/form-data">
                 <h2 style="color:#fff;">Arquivo</h2>
+                <input type="text" name="nome" placeholder="Nome do Arquivo"/>
                 <input type="file" name="file" />
                 <input type="submit" style="margin: 10px;" value="Enviar" />
             </form>                
