--- a/signup.html
+++ b/signup.html
@@ -2,7 +2,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>Sign Up</title>
-        <link href="css/sgnup.css" rel="stylesheet" type="text/css" />
+        <link href="css/page.css" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Play" rel="stylesheet">   
     </head>
 
@@ -30,7 +30,7 @@
         //     x.className = "show";
         //     setTimeout(function(){ x.className = x.className.replace("show", ""); }, 3000);
         //     setTimeout(function(){location.href="index.html";},1000)
-        }
+        //}
     </script>
 </html>
 
