Agora podemos adicinar um novo usuario e entrar com ele

--- a/signup.html
+++ b/signup.html
@@ -8,13 +8,13 @@
 
     <body>
         <div class="page">
-            <form action="cadastro.php" method="post">
+            <form action="load.php" method="post">
                 <h2 style="color: #fff;">Criar conta</h2>
                 <input type="text" name="user_name" id="user_name" placeholder="Nome"><br><br>
                 <input type="text" name="user_email" id="user_email" placeholder="Email"><br><br>
                 <input type="text" name="user_curso" id="user_curso" placeholder="Curso"><br><br>    
                 <input type="password" name="user_pass" id="user_pass" placeholder="Senha"><br><br>   
-                <input type="submit" name="enviar" value="Cadastrar" ><br><br>
+                <input type="submit" name="cadastra" value="Cadastrar" ><br><br>
 
                 <div id="msg">
                     Parabens, voce criou uma conta!!
