--- a/forget.html
+++ b/forget.html
@@ -52,13 +52,13 @@
 
     <body>
         <div class="forget">
-            <form action="" method="post">
+            <form action="load.php" method="post">
                 <h2 align="center" style="color:#fff;">Recuperar sua conta</h2>
                 <h5 style="font-size:14px; color:yellow;">Podemos ajudá-lo a redefinir sua senha.
                  Primeiro, insira seu email.</h5>
                 <input type="text" name="username" placeholder="Email" /><br /><br />
-                <input type="button" value="Enviar" onclick="myFunction()"/><br /><br />
-                <a href="index.html" style="margin-left:90px; text-decoration:none;">Cancelar</a><br /><br />
+                <input type="submit" value="Enviar" onclick="myFunction()"/><br /><br />
+                <a href="index.html"  "text-decoration:none;">Cancelar</a><br /><br />
                 <div id="msg">Link send on your email successfully!!</div>
             </form>
         </div>
