--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>Login</title>
-        <link href="css/logn.css" rel="stylesheet" type="text/css" />
+        <link href="css/page.css" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Play" rel="stylesheet">
     </head>
 
