--- a/signup.html
+++ b/signup.html
@@ -17,7 +17,7 @@
                 <input type="submit" name="cadastra" value="Cadastrar" ><br><br>
 
                 <div id="msg">
-                    Parabens, voce criou uma conta!!
+                    Parabens!!, voce criou uma conta!!
                 </div>
                 Já criou sua conta?
                 <a href="index.html" style="text-decoration: none; font-family: 'Play', sans-serif; color: yellow;">&nbsp;Entrar</a>
