--- a/signup.html
+++ b/signup.html
@@ -20,7 +20,7 @@
                     Parabens!!, voce criou uma conta!!
                 </div>
                 Já criou sua conta?
-                <a href="index.html" style="text-decoration: none; font-family: 'Play', sans-serif; color: yellow;">&nbsp;Entrar</a>
+                <a href="index.php" style="text-decoration: none; font-family: 'Play', sans-serif; color: yellow;">&nbsp;Entrar</a>
             </form>  
         </div>
     </body>
