--- a/forget.html
+++ b/forget.html
@@ -53,12 +53,12 @@
     <body>
         <div class="forget">
             <form action="load.php" method="post">
-                <h2 align="center" style="color:#fff;">Recuperar sua conta</h2>
+                <h2  style="color:#fff;">Recuperar sua conta</h2>
                 <h5 style="font-size:14px; color:yellow;">Podemos ajudá-lo a redefinir sua senha.
                  Primeiro, insira seu email.</h5>
                 <input type="text" name="username" placeholder="Email" /><br /><br />
                 <input type="submit" value="Enviar" onclick="myFunction()"/><br /><br />
-                <a href="index.html"  "text-decoration:none;">Cancelar</a><br /><br />
+                <a href="index.php"  text-decoration:none; >Cancelar</a><br /><br />
                 <div id="msg">Link send on your email successfully!!</div>
             </form>
         </div>
@@ -67,7 +67,7 @@
         function myFunction() {
             var x = document.getElementById("msg");
             x.className = "show";
-            setTimeout(function(){ x.className = x.className.replace("show", ""); }, 3000);
+            setTimeout(function(){ x.className = x.className.replace("show", ""); }, 6000);
         }
     </script>
 </html>
