--- a/sucesso.html
+++ b/sucesso.html
@@ -9,8 +9,8 @@
 <body>
 <div class="cong">
     <form>
-        <h2 style="color: white">Congratulations you Log In successfully!!!</h2>
-        <a href="index.php" style="text-decoration: none">Go back to Home page</a>
+        <h2 style="color: white">TCC salvo com Sucesso</h2>
+        <a href="index.php" style="text-decoration: none">Voltar para login</a>
         <br><br>
     </form>
     
